--- a/.env.example
+++ b/.env.example
@@ -26,5 +26,10 @@ SOL_AMOUNT=2
 # AMM Configuration
 SLIPPAGE_TOLERANCE=1  # 1% slippage tolerance
 
+# Token Metadata Configuration (Metaplex)
+TOKEN_NAME=My Demo Token
+TOKEN_SYMBOL=MDT
+TOKEN_IMAGE_URI=https://arweave.net/your-token-image-uri-here
+
 # Logging
 LOG_LEVEL=info
