feat: 🎸 apply solana smart contract via Anchor

--- a/.env.example
+++ b/.env.example
@@ -29,7 +29,13 @@ SLIPPAGE_TOLERANCE=1  # 1% slippage tolerance
 # Token Metadata Configuration (Metaplex)
 TOKEN_NAME=My Demo Token
 TOKEN_SYMBOL=MDT
-TOKEN_IMAGE_URI=https://arweave.net/your-token-image-uri-here
+TOKEN_IMAGE_URI=https://arweave.net/your-image-uri
+TOKEN_EXTERNAL_URL=https://your-website.com
+
+# Program Configuration (Token Launcher)
+PROGRAM_ID=11111111111111111111111111111111
+INITIAL_TOKEN_PRICE=0.001
+MAX_TOKEN_SUPPLY=1000000
 
 # Logging
 LOG_LEVEL=info
