--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
     "metadata-example": "ts-node src/metadata-example.ts",
+    "program-demo": "ts-node src/program-demo.ts",
+    "real-program-demo": "ts-node src/realProgramDemo.ts",
     "clean": "rm -rf dist"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "^0.30.1",
     "@metaplex-foundation/mpl-token-metadata": "^3.4.0",
     "@metaplex-foundation/umi": "^1.2.0",
     "@metaplex-foundation/umi-bundle-defaults": "^1.2.0",
